Add BudgetController and enhance BudgetService to calculate budget status